# dollop

./: .gitignore  README.md  converter.py  metrics.txt  pipeline.py  pipeline_v2_luigi.py  pyproject.toml  relations_training.spacy  requirements.txt  requiriments.txt  train.spacy
dollop/: expand.py  logging.py  matcher.py  ner.py  scrape.py  spacy_converter.py  split.py  util.py
dollopV2/: ner.py  scrape.py
rel_component/: main.py  project.yml
rel_component/configs/: rel_trf.cfg
rel_component/scripts/: custom_functions.py  rel_pipe.py
task/: util.py
