[tool.poetry]
name = "dollop"
version = "0.1.0"
description = ""
authors = ["Diego Sanchez <diegosanchezco3@gmail.com>, DavDavid Przybilla <dav.alejandro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^2.3.0"
pandas = "^1.4.2"
luigi = "^3.0.3"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
