[tool.poetry]
name = "dollop"
version = "0.1.0"
description = ""
authors = ["Diego Sanchez <diegosanchezco3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
luigi = "^3.0.3"
pandas = "^1.4.2"
jusText = "^3.0.0"
requests = "^2.27.1"
tqdm = "^4.64.0"
torch = "^1.11.0"
transformers = "^4.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
